# learning

./: .gitmodules
algods/algorithms-sedgewick-robert/: rbtree.c  rbtree.h  rbtree_test  rbtree_test.c  util.h
assembly/gas-x64/: cpuid.s  crc32.s  fastrand.asm
assembly/gas-x64/scripts/: build-exec.sh  build-with-c.sh
assembly/gas-x64/simd/: simd.s  zeroing.asm
assembly/gas-x64/simd/intrin/: intrin1.c  intrin1_avx.asm  intrin1_avx2.asm  intrin1_sse.asm
assembly/gas-x64/simd/mmx/: MMXCopy.asm  MMXCopy.c  NOTES.md  mmx1.s
assembly/gas-x64/simd/sse/: NOTES.md  sse.asm
assembly/nasm-x86/: README.md  byte_and_word.c  byte_and_word.s  chars.c  chars.s  cmp_and_jmp.s  data.s  first.s  functions.s  helloc.s  lexer.s  lexerutils.c  logical_operator.s  loop.s  math.s  proc.s  uninitialized.s
assembly/nasm-x86/c_funcs_impl/: c_funcs.s
assembly/nasm-x86/scripts/: build-exec.sh  build-with-c.sh
c/beejintrotoc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generated_text.txt
c/beejintrotoc/11-pointers-ii-arithmetic/: 3_void_pointers.c
c/beejintrotoc/12_manual_memory_allocation/: byte.c  generate-huge-file.sh  malloc.c  readline.c
c/beejintrotoc/16-type-qualifiers-and-specifiers/: restrict.c
c/beejintrotoc/20-structs-ii-more-fun-with-structs/: bitfields.c  offsetof.c  padding.c  union.c
c/beejintrotoc/23-pointers-to-pointers/: multibyte.c
c/beejintrotoc/27-unicode-wide-characters-and-all-that/: unicode.c
c/beejintrotoc/musl_vs_glibc/: memcpy.c  memcpy_glibc.s
c/binary-inspection/: debugsym  debugsym.c
c/compilation/: dlopen.c  hello  math.c  preprocess.c
c/compilation/dynamic_lib/include/: cat.h  dog.h
c/compilation/dynamic_lib/libcat/: cat.c  dog.c  libanimal.so.1.0
c/compilation/static_lib/: cat  cat.dump  main.c
c/compilation/static_lib/include/: cat.h
c/compilation/static_lib/libcat/: cat.c
go/go-hi-perf/: go.mod
go/go-hi-perf/interface-boxing/: main_test.go
go/go-hi-perf/memory-preallocation/: main_test.go
go/go-hi-perf/object-pooling/: main_test.go
go/go-hi-perf/struct-field-alignment/: main_test.go
go/go-hi-perf/zero-copy/: main_test.go
go/learning-go-2ed/: go.mod  main
go/learning-go-2ed/ch12/deadlock/: main.go
go/learning-go-2ed/ch12/wait-channel/: main.go
go/learning-go-2ed/ch2/: main.go
go/learning-go-2ed/ch2/ex1/: main.go
go/learning-go-2ed/ch2/ex2/: main.go
go/learning-go-2ed/ch2/ex3/: main.go
go/learning-go-2ed/ch3/ex1/: main.go
go/learning-go-2ed/ch3/ex2/: main.go
go/learning-go-2ed/ch3/map/: main.go
go/learning-go-2ed/ch3/set/: set.go
go/learning-go-2ed/ch3/set-user/: main.go
go/learning-go-2ed/ch3/slice/: main.go
go/learning-go-2ed/ch3/strings/: main.go
go/learning-go-2ed/ch3/structs/: main.go
go/learning-go-2ed/ch6/gc-optimization/: main.go
go/learning-go-2ed/ch6/nil-pointer/: main.go
go/learning-go-2ed/ch8/algo-abstraction/: main.go
go/learning-go-2ed/ch8/generics-and-interfaces/: main.go
go/the-go-programming-language/: README.md
go/the-go-programming-language/ch3/compact-uint8-bits/: main.go
go/the-go-programming-language/ch3/floating-point-numbers/: main.go
go/the-go-programming-language/ch4/slice/: main.go
go/the-go-programming-language/ch8/client-time/: main.go
go/the-go-programming-language/ch8/clock1/: main.go
network-programming/beej/: CMakeLists.txt
network-programming/beej/addrinfo/: dhcp_client.c  dhcp_client.h  dns_lookup.c  main.c  nc.c  server.c  slice.c  slice.h
simd/: popcnt
simd/include/: common.h  register_printer.h  unions.h
simd/lib/: popcnt.S  popcnt.c  sse.c
simd/programs/: arith_intro.c  indexof_newline.c  sse_main.c
simd/scripts/: build.sh
(+32 files in other folders)
